# event2vec

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  results.ipynb  results_dy1j.ipynb  results_dy1j_Sep26.ipynb  results_dy1j_modified.ipynb  results_gaussmixture.ipynb  results_gaussmixture_modified.ipynb  run.py  test_vbfh.ipynb
.github/workflows/: ci.yml
data/dy1j/: notes.md
data/vbfhzz/: make_reweight.py  notes.md  rotate_HISZ_to_SMEFT.py
event2vec/: dataset.py  experiment.py  loss.py  model.py  models.py  prior.py  training.py
event2vec/datasets/: __init__.py  gaussmixture.py  lhedataset.py
notebook/: matrix_regression_attempt_1.ipynb  matrix_regression_attempt_2.ipynb  matrix_regression_attempt_3.ipynb  matrix_regression_attempt_4.ipynb  matrix_regression_attempt_5.ipynb  matrix_regression_attempt_6.ipynb  results_dy1j_Sep26.ipynb  results_gaussmixture_modified.ipynb  test_vbfh.ipynb
src/event2vec/: __init__.py  analysis.py  cli.py  data_loss_refactor_stub.py  dataset.py  experiment.py  loss.py  model.py  nontrainable.py  prior.py  shapes.py  training.py  util.py
src/event2vec/datasets/: __init__.py  gaussmixture.py  lhedataset.py
src/event2vec/experiments/: __init__.py  carl_vbfhiggs.py  gaussmixture.py  vec_vbfhiggs.py
src/event2vec/losses/: __init__.py  _loss.py  _psd_matrix_losses.py  psd_matrix_losses.py
src/event2vec/models/: __init__.py  _activations.py  _model.py  _psd_matrix_models.py  activations.py  carl.py  mlp.py  psd_matrix_models.py  vecdot.py
src/event2vec/pipelinax/: README.md  data.py  loss.py  metric.py  nontrainability.py  run_experiment.py  training_and_evaluation.py  type_aliases.py  utils.py
src/event2vec/utils/: __init__.py  _is_static_utils.py  _stats.py  _trainability.py  _wrappers.py
