[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "event2vec"
authors = [
  { name = "Prasanth Shyamsundar", email = "prasanth@fnal.gov" },
  { name = "Nick Smith", email = "nick.smith@cern.ch" },
]
description = "event2vec: Learning Event Representations for Effective Field Theories"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
  "equinox",
  "jax",
  "matplotlib",
  "numpy",
  "optax",
  "rich[jupyter]",
  "ipykernel<7",   # https://github.com/Textualize/rich/issues/3868
  "pylhe",
  "awkward",
]

[project.scripts]
e2vrun = "event2vec.cli:main"

[project.optional-dependencies]
test = ["pytest >=6"]

[project.urls]
Homepage = "https://github.com/nsmith-/event2vec"
"Bug Tracker" = "https://github.com/nsmith-/event2vec/issues"
Changelog = "https://github.com/nsmith-/event2vec/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/event2vec/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.ruff.lint]
ignore = [
  "F722", # syntax error in forward annotation (used by jaxtyping)
]
